# retask

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  TODO  pyproject.toml  requirements.txt  setup.py  tests.py
docs/: Makefile  api.rst  conf.py  index.rst  retask.queue.rst  retask.task.rst
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/_themes/kr/: layout.html
docs/user/: install.rst  intro.rst  quickstart.rst  redis.rst  tutorials.rst
examples/: async_producer.py  async_worker.py  consumer.py  producer.py  sync_producer.py
retask/: __init__.py  exceptions.py  manager.py  pqueue.py  queue.py  release.py  task.py
tests/: test_simple.py
